--- a/sandbox/us/templates/us/base.html
+++ b/sandbox/us/templates/us/base.html
@@ -8,38 +8,11 @@
  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<script type="text/javascript">
- $(function() {
- $('#submitButton').click(function() {
- $.ajax({
- type: "POST",
- url: "/makeshort/",
- data: {
- 'url' : $('#url').val(),
- 'csrfmiddlewaretoken' : $("input[name=csrfmiddlewaretoken]").val(),
- 'error' : ""
- },
- success: returnSuccess,
- dataType: 'json'
- });
- });
-});
- 
-function returnSuccess(data, textStatus, jqXHR) {
- if(data.url) {
- $('#url-result').text("URL was successfully shortened: ");
- $('#url-result').append('<a href="' + data.url + '">' + data.url + '</a>')
- 
- } else {
- $('#url-result').text(data.error); 
- }
-  
-}
-</script>
+
 <body>
 <div id="wrap">
 <header>
- <h1><a href="{% url 'us:home' %}">URL Shortener</a><br><small>Shorten the URL</small></h1>
+ <h1><a href="{% url 'us:home' %}">URL Shortener</a><br><small>{{ action }}</small></h1>
 </header>
  
 <div id="content">
