Initial setup of Admirals game

--- a/sandbox/us/templates/us/index.html
+++ b/sandbox/us/templates/us/index.html
@@ -21,7 +21,7 @@
  $('#submitButton').click(function() {
  $.ajax({
  type: "POST",
- url: "/makeshort/",
+ url: "makeshort/",
  data: {
  'url' : $('#url').val(),
  'csrfmiddlewaretoken' : $("input[name=csrfmiddlewaretoken]").val(),
