--- a/sandbox/admirals/templates/admirals/base.html
+++ b/sandbox/admirals/templates/admirals/base.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>{% block title %}<!-- Title rendered here -->{% endblock %}</title>
+ <title>{% block title %}Welcome to Admirals{% endblock %}</title>
  {% load staticfiles %}
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
- <link rel="stylesheet" type="text/css" href="{% static 'us/css/custom.css' %}" />
- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+ <link rel="stylesheet" type="text/css" href="{% static 'admirals/css/board.css' %}" />
+ <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
 <div id="wrap">
 <header>
- <h1><a href="{% url 'us:home' %}">URL Shortener</a><br><small>{{ action }}</small></h1>
+ <h1><a href="{% url 'us:home' %}">Admirals</a><br><small>{{ action }}</small></h1>
 </header>
  
 <div id="content">
